--- a/myweb/templates/home.html
+++ b/myweb/templates/home.html
@@ -3,11 +3,79 @@
     <head>
         <meta charset="UTF-8">
         <title>hotdfandom</title>
+        <style>
+            h1 {
+                color: rgb(153, 130, 0);
+                text-align: center;
+            }
+            .first-image {
+                width: 400px; /* Set the desired width for the first image */
+                height: auto; /* Maintain aspect ratio */
+            }
+            .second-image {
+                width: 1600px; /* Set the desired width for the first image */
+                height: auto; /* Maintain aspect ratio */
+            }
+
+            .homepage1 {
+                background: black ;
+                text-align: center;
+            }
+        </style>
+        #css
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        #jacascript
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     </head>
     <body>
-        <h1>Home Page HTML</h1>
+        # navbar code
+        <nav class="navbar navbar-dark bg-black fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">HOTD</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <form class="d-flex mt-3" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </nav>
+      <div class="homepage1">
 
-    <h1>{{ word }}</h1>
-
+          <img class="first-image" alt="" src="https://hotd-hub.micro.hbo.com/_next/static/media/tt.b609ac3d.png" width="1600" height="309" decoding="async" >
+          <img class="second-image" src="https://static.hbo.com/2024-05/house-of-the-dragon-s2-ka-1920.jpg">
+      </div>
     </body>
 </html>
+
